[gd_scene load_steps=6 format=3 uid="uid://lbc58g6lne8g"]

[ext_resource type="PackedScene" uid="uid://bhmdobeuhceae" path="res://Scenes/UI/AssetCard.tscn" id="1_jmgjt"]
[ext_resource type="Script" path="res://Scripts/UI/Match.gd" id="1_l0fja"]
[ext_resource type="PackedScene" uid="uid://bpgcr756l6cp8" path="res://Scenes/UI/EndMatchOverlay.tscn" id="3_n0vqm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8fgj2"]
bg_color = Color(2.94801e-07, 0.146215, 0.199828, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ga3pa"]

[node name="Match" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l0fja")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.06
anchor_right = 0.97
anchor_bottom = 0.06
offset_bottom = 364.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="TotalValueLabel" type="Label" parent="LabelVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Total Value: $0"

[node name="UnallocatedLabel" type="Label" parent="LabelVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Unallocated Funds: $0"

[node name="MonthHBox" type="HBoxContainer" parent="LabelVBox"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="MonthLabel" type="Label" parent="LabelVBox/MonthHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Month: 0"

[node name="MonthProgressBar" type="ProgressBar" parent="LabelVBox/MonthHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_8fgj2")
show_percentage = false

[node name="IndicatorContainer" type="HBoxContainer" parent="LabelVBox"]
layout_mode = 2
alignment = 1

[node name="IndicatorFlow" type="HFlowContainer" parent="LabelVBox/IndicatorContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 20
alignment = 1
reverse_fill = true

[node name="IndicatorPanel1" type="PanelContainer" parent="LabelVBox/IndicatorContainer/IndicatorFlow"]
layout_mode = 2

[node name="IndicatorLabel" type="Label" parent="LabelVBox/IndicatorContainer/IndicatorFlow/IndicatorPanel1"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 40
text = "     Indicator     "
horizontal_alignment = 1

[node name="Arena" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.05
anchor_top = 0.24
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2

[node name="ArenaBackground" type="TextureRect" parent="Arena"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimalAsset1" parent="Arena" groups=["AnimalAssets"] instance=ExtResource("1_jmgjt")]
layout_mode = 1
offset_left = -443.0
offset_top = -587.54
offset_right = -193.0
offset_bottom = -237.54
scale = Vector2(1.5, 1.5)

[node name="AnimalAsset2" parent="Arena" groups=["AnimalAssets"] instance=ExtResource("1_jmgjt")]
layout_mode = 1
offset_left = 78.0
offset_top = -476.54
offset_right = 328.0
offset_bottom = -126.54
scale = Vector2(1.5, 1.5)

[node name="AnimalAsset3" parent="Arena" groups=["AnimalAssets"] instance=ExtResource("1_jmgjt")]
layout_mode = 1
offset_left = -443.0
offset_top = 125.46
offset_right = -193.0
offset_bottom = 475.46
scale = Vector2(1.5, 1.5)

[node name="AnimalAsset4" parent="Arena" groups=["AnimalAssets"] instance=ExtResource("1_jmgjt")]
layout_mode = 1
offset_left = 79.0
offset_top = 245.46
offset_right = 329.0
offset_bottom = 595.46
scale = Vector2(1.5, 1.5)

[node name="MonthTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="AllocateToBeginContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.25
anchor_right = 0.8
anchor_bottom = 0.3
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="AllocateToBeginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Allocate to Begin!"
horizontal_alignment = 1

[node name="EndMatchOverlay" parent="." instance=ExtResource("3_n0vqm")]
visible = false
layout_mode = 1

[node name="NextYearButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 83.0
offset_top = 2287.0
offset_right = 557.0
offset_bottom = 2481.0
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_ga3pa")
text = "Next Year"

[connection signal="pressed" from="NextYearButton" to="." method="_on_next_year_button_pressed"]
